.metadata/.plugins/org.eclipse.cdt.ui/ejercicio2.2sabado.build.log
20:25:13 **** Rebuild of configuration Debug for project ejercicio2.2sabado ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ejercicio2.2sabado.o" "..\\src\\ejercicio2.2sabado.c" 
..\src\ejercicio2.2sabado.c: In function 'main':
..\src\ejercicio2.2sabado.c:21:5: warning: 'main' is normally a non-static function [-Wmain]
   21 | int main(void) {
      |     ^~~~
..\src\ejercicio2.2sabado.c: In function 'main':
..\src\ejercicio2.2sabado.c:31:10: warning: right-hand operand of comma expression has no effect [-Wunused-value]
   31 |  for(i=0 , i<10, i++)
      |          ^
..\src\ejercicio2.2sabado.c:31:21: error: expected ';' before ')' token
   31 |  for(i=0 , i<10, i++)
      |                     ^
      |                     ;
..\src\ejercicio2.2sabado.c:31:21: error: expected expression before ')' token
..\src\ejercicio2.2sabado.c:34:26: error: expected ';' before '}' token
   34 |   scanf("%d", &vector[i])
      |                          ^
      |                          ;
   35 |  }
      |  ~                        
..\src\ejercicio2.2sabado.c:39:20: warning: implicit declaration of function 'calcularPromedio'; did you mean 'calcularPromedioPositivos'? [-Wimplicit-function-declaration]
   39 |  promedioPositivo= calcularPromedio(vector[i]);
      |                    ^~~~~~~~~~~~~~~~
      |                    calcularPromedioPositivos
..\src\ejercicio2.2sabado.c:43:45: warning: format '%f' expects a matching 'double' argument [-Wformat=]
   43 |  printf("El promedio de los positivos es %2.f")
      |                                          ~~~^
      |                                             |
      |                                             double
..\src\ejercicio2.2sabado.c:43:48: error: expected ';' before 'printf'
   43 |  printf("El promedio de los positivos es %2.f")
      |                                                ^
      |                                                ;
......
   48 |   printf("El numero ingresado es %d" , promedioPositivo);
      |   ~~~~~~                                        
..\src\ejercicio2.2sabado.c:29:6: warning: variable 'sumaNegativos' set but not used [-Wunused-but-set-variable]
   29 |  int sumaNegativos;
      |      ^~~~~~~~~~~~~
..\src\ejercicio2.2sabado.c:28:6: warning: variable 'contadorCeros' set but not used [-Wunused-but-set-variable]
   28 |  int contadorCeros;
      |      ^~~~~~~~~~~~~
..\src\ejercicio2.2sabado.c:25:6: warning: variable 'promedioPositivo' set but not used [-Wunused-but-set-variable]
   25 |  int promedioPositivo;
      |      ^~~~~~~~~~~~~~~~
..\src\ejercicio2.2sabado.c: In function 'calcularPromedioPositivo':
..\src\ejercicio2.2sabado.c:57:6: error: 'i' redeclared as different kind of symbol
   57 |  int i;
      |      ^
..\src\ejercicio2.2sabado.c:55:35: note: previous definition of 'i' was here
   55 | int calcularPromedioPositivo (int i)
      |                               ~~~~^
..\src\ejercicio2.2sabado.c:68:5: error: 'numero' undeclared (first use in this function)
   68 |  if(numero>0)
      |     ^~~~~~
..\src\ejercicio2.2sabado.c:68:5: note: each undeclared identifier is reported only once for each function it appears in
..\src\ejercicio2.2sabado.c:72:4: error: 'promedio' undeclared (first use in this function)
   72 |    promedio=(float)acumulador/contador;
      |    ^~~~~~~~
..\src\ejercicio2.2sabado.c:79:11: warning: assignment to 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   79 |    retorno="No se ingreso ningun numero positivo";
      |           ^
..\src\ejercicio2.2sabado.c:59:6: warning: unused variable 'suma' [-Wunused-variable]
   59 |  int suma;
      |      ^~~~
..\src\ejercicio2.2sabado.c:57:6: warning: unused variable 'i' [-Wunused-variable]
   57 |  int i;
      |      ^
..\src\ejercicio2.2sabado.c: In function 'main':
..\src\ejercicio2.2sabado.c:91:5: error: static declaration of 'contarCeros' follows non-static declaration
   91 | int contarCeros(int numero1)
      |     ^~~~~~~~~~~
..\src\ejercicio2.2sabado.c:20:5: note: previous declaration of 'contarCeros' was here
   20 | int contarCeros(int);
      |     ^~~~~~~~~~~
..\src\ejercicio2.2sabado.c:110:5: error: static declaration of 'sumarNegativos' follows non-static declaration
  110 | int sumarNegativos(int numero2)
      |     ^~~~~~~~~~~~~~
..\src\ejercicio2.2sabado.c:19:5: note: previous declaration of 'sumarNegativos' was here
   19 | int sumarNegativos(int);
      |     ^~~~~~~~~~~~~~
..\src\ejercicio2.2sabado.c: In function 'sumarNegativos':
..\src\ejercicio2.2sabado.c:112:6: error: 'numero2' redeclared as different kind of symbol
  112 |  int numero2;
      |      ^~~~~~~
..\src\ejercicio2.2sabado.c:110:24: note: previous definition of 'numero2' was here
  110 | int sumarNegativos(int numero2)
      |                    ~~~~^~~~~~~
..\src\ejercicio2.2sabado.c:118:10: warning: right-hand operand of comma expression has no effect [-Wunused-value]
  118 |   for(i=0, i<numero2 , i++)
      |          ^
..\src\ejercicio2.2sabado.c:118:27: error: expected ';' before ')' token
  118 |   for(i=0, i<numero2 , i++)
      |                           ^
      |                           ;
..\src\ejercicio2.2sabado.c:118:27: error: expected expression before ')' token
At top level:
..\src\ejercicio2.2sabado.c:110:5: warning: 'sumarNegativos' defined but not used [-Wunused-function]
  110 | int sumarNegativos(int numero2)
      |     ^~~~~~~~~~~~~~
..\src\ejercicio2.2sabado.c:91:5: warning: 'contarCeros' defined but not used [-Wunused-function]
   91 | int contarCeros(int numero1)
      |     ^~~~~~~~~~~
..\src\ejercicio2.2sabado.c:55:5: warning: 'calcularPromedioPositivo' defined but not used [-Wunused-function]
   55 | int calcularPromedioPositivo (int i)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
..\src\ejercicio2.2sabado.c:21:5: warning: 'main' defined but not used [-Wunused-function]
   21 | int main(void) {
      |     ^~~~

20:25:13 Build Failed. 12 errors, 15 warnings. (took 651ms)

